--- a/styles/_components/_connection_mask.scss
+++ b/styles/_components/_connection_mask.scss
@@ -10,6 +10,12 @@
   align-items: center;
   justify-content: center;
 
+  @media screen and (max-width: 768px) {
+    left: 0px;
+    width: 100%;
+  }
+
+
   &.long {
     min-height: 750px;
     margin-top: 45px;
