--- a/styles/_components/_vault_pool.scss
+++ b/styles/_components/_vault_pool.scss
@@ -7,8 +7,13 @@
   margin-bottom: 59px;
   cursor: pointer;
 
+  @media screen and (max-width: 768px) {
+    margin-bottom: 21px;
+    padding-top: 11px;
+  }
+
   &.kujira {
-    background: #22252E;
+    background: #22252e;
     border: none;
   }
 
@@ -25,6 +30,12 @@
     margin-left: 20px;
     margin-right: 20px;
 
+    @media screen and (max-width: 768px) {
+      padding: 3px 14px;
+      margin-left: 11px;
+      margin-right: 11px;
+    }
+
     &.kujira {
       background: #323843;
       border: none;
@@ -32,6 +43,10 @@
 
     img {
       height: 64px;
+
+      @media screen and (max-width: 768px) {
+        height: 39px;
+      }
     }
 
     .pool-name {
@@ -41,6 +56,10 @@
         color: #ffffff;
         font-weight: 700;
         font-size: 30px;
+
+        @media screen and (max-width: 768px) {
+          font-size: 20px;
+        }
       }
 
       &-category {
@@ -48,8 +67,12 @@
         font-weight: 500;
         font-size: 16px;
 
+        @media screen and (max-width: 768px) {
+          font-size: 13px;
+        }
+
         &.kujira {
-          color: #D3483E;
+          color: #d3483e;
         }
       }
     }
@@ -64,6 +87,14 @@
     margin-left: 20px;
     margin-right: 20px;
 
+    @media screen and (max-width: 768px) {
+      margin-top: 9px;
+      margin-left: 11px;
+      margin-right: 11px;
+      width: calc(100% - 22px);
+      padding-bottom: 11px;
+    }
+
     .value-item {
       background: #313650;
       border-radius: 30px;
@@ -74,6 +105,11 @@
       justify-content: center;
       padding: 17px 26px;
 
+      @media screen and (max-width: 768px) {
+        padding: 9px 14px;
+        margin-left: 6px;
+      }
+
       &.kujira {
         background: #323843;
         border: none;
@@ -82,6 +118,10 @@
       &.apy {
         margin-left: 0px;
         max-width: 127px;
+
+        @media screen and (max-width: 768px) {
+          max-width: 70px;
+        }
       }
 
       &-name {
@@ -91,7 +131,12 @@
         line-height: 21px;
 
         &.kujira {
-          color: #D3483E;
+          color: #d3483e;
+        }
+
+        @media screen and (max-width: 768px) {
+          font-size: 10px;
+          line-height: 12px;
         }
       }
 
@@ -100,6 +145,11 @@
         font-size: 20px;
         line-height: 21px;
         color: #ffffff;
+
+        @media screen and (max-width: 768px) {
+          font-size: 13px;
+          line-height: 13px;
+        }
       }
     }
   }
@@ -115,9 +165,19 @@
     font-size: 16px;
     line-height: 21px;
 
+    @media screen and (max-width: 768px) {
+      padding: 11px 39px;
+      font-size: 13px;
+      line-height: 13px;
+    }
+
     img {
       height: 15px;
       margin-right: 5px;
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
     }
 
     span {
@@ -126,6 +186,11 @@
       font-weight: 700;
       font-size: 30px;
       line-height: 21px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 20px;
+        line-height: 20px;
+      }
     }
   }
 }
