--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -93,19 +93,58 @@
 
 .notice-container {
   width: 95vw;
-  max-width: 1147px;
+  max-width: 1100px;
   margin: 0px auto 77px;
-  background: #262b43;
-  border-radius: 11px;
+ 
   font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  padding: 24px 47px 17px;
+  font-size: 8px;
+  line-height: 11px;
   color: #60699e;
+  display: flex;
 
   @media screen and (max-width: 768px) {
-    padding: 20px 19px 7px;
-    width: calc(100vw - 66px);
+    flex-direction: column;
+    width: 100%;
+    padding: 0px 33px;
+  }
+
+  .social-wrapper {
+    display: flex;
+    align-items: center;
+    background: #262b43;
+    border-radius: 11px;
+    padding: 0px 40px;
+
+    @media screen and (max-width: 768px) {
+      height: 50px;
+      justify-content: center;
+      width: 100%;
+    }
+
+    img {
+      height: 32px;
+      margin: 0px 7px;
+
+      @media screen and (max-width: 768px) {
+        height: 29px;
+        margin: 0px 22px;
+      }
+    }
+
+  
+  }
+
+  .notice-wrapper {
+    background: #262b43;
+    border-radius: 11px;
+    margin-left: 14px;
+    flex: 1;
+    padding: 14px 18px;
+
+    @media screen and (max-width: 768px) {
+      margin-left: 0px;
+      margin-top: 13px;
+    }
   }
 }
 
