add loading icon, progress bar

--- a/styles/_components/index.scss
+++ b/styles/_components/index.scss
@@ -3,6 +3,7 @@
 @import 'banner';
 @import 'amount_view';
 @import 'donut';
+@import 'loading_icon';
 
 @import '_viewcontainer';
 @import '_deposit_amount_input';
