--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -57,6 +57,11 @@
         width: 100%;
         background: rgba(55, 250, 211, 0.4);
 
+        &.zero {
+          height: 1px;
+          background: rgba(96, 105, 158, 1);
+        }
+
         .insider {
           width: 75%;
           height: 8px;
@@ -222,6 +227,9 @@
     color: #20253b;
     margin-top: 25px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @media screen and (max-width: 768px) {
       font-size: 16px;
