--- a/styles/_pages/_liquidity.scss
+++ b/styles/_pages/_liquidity.scss
@@ -86,8 +86,8 @@
     }
 
     .divider {
-      background: #60699e;
-      height: 1px;
+      background: rgba(55, 250, 211, 0.4);
+      height: 8px;
       width: 100%;
       margin-top: 44px;
       margin-bottom: 36px;
@@ -95,6 +95,18 @@
       @media screen and (max-width: 768px) {
         margin-top: 40px;
         margin-bottom: 25px;
+      }
+
+      &.zero {
+        background: #60699e;
+        height: 1px;
+      }
+
+      &-progress {
+        background: rgba(55, 250, 211, 1);
+        height: 8px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
       }
     }
 
