--- a/styles/_components/_connection_mask.scss
+++ b/styles/_components/_connection_mask.scss
@@ -3,7 +3,7 @@
   background: rgba(32, 37, 59, 0.8);
   position: absolute;
   border-radius: 30px;
-  width: 483px;
+  width: 100%;
   min-height: 519px;
   display: flex;
   flex-direction: column;
