update loading spinner color

--- a/styles/_components/_loading_icon.scss
+++ b/styles/_components/_loading_icon.scss
@@ -9,8 +9,8 @@
     width: 30px;
     height: 30px;
     border: solid 4px transparent;
-    border-top-color: #00c8b1 !important;
-    border-left-color: #00c8b1 !important;
+    border-top-color: #20253B !important;
+    border-left-color: #20253B !important;
     border-radius: 50%;
   }
 
