--- a/styles/_components/_vault_pool.scss
+++ b/styles/_components/_vault_pool.scss
@@ -24,6 +24,38 @@
     cursor: not-allowed;
   }
 
+  .pool-updated-wrapper {
+    background: #313650;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    padding: 13px 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+
+    &.kujira {
+      background: #323843;
+    }
+
+    .pool-updated-text {
+      font-weight: 500;
+      font-size: 14px;
+      color: #b6b2ef;
+      margin-right: 10px;
+
+      &.kujira {
+        color: #d3483e;
+      }
+    }
+
+    .pool-updated-date {
+      font-weight: 700;
+      font-size: 16px;
+      color: #ffffff;
+    }
+  }
+
   .pool-name-wrapper {
     background: #313650;
     border-radius: 30px;
@@ -77,6 +109,38 @@
         &.kujira {
           color: #d3483e;
         }
+      }
+    }
+  }
+
+  .pool-buttons-wrapper {
+    display: flex;
+    align-items: center;
+    margin: 21px 20px 30px;
+
+    .pool-migrate-button {
+      border-radius: 30px;
+      border: none;
+      width: 182.42px;
+      height: 49px;
+      font-weight: 500;
+      font-size: 19.9006px;
+      cursor: pointer;
+
+      svg {
+        transform: rotate(45deg);
+        margin-left: 5px;
+      }
+
+      &.migrate {
+        background: #b6b2ef;
+        color: #20253b;
+        margin-right: 7px;
+      }
+
+      &.withdraw {
+        background: #323843;
+        color: #a2a0a0;
       }
     }
   }
