--- a/styles/_pages/index.scss
+++ b/styles/_pages/index.scss
@@ -2,6 +2,7 @@
 @import "ukraine";
 @import "blog";
 @import "event";
+@import "migration";
 
 .custom-404-container {
   display: flex;
@@ -33,5 +34,71 @@
   a {
     color: #37fad3;
     text-decoration: underline;
+  }
+}
+
+.select-liquidity-arrow {
+  width: 289px;
+  height: 45px;
+  border: 2px solid #313650;
+  box-sizing: border-box;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+
+  @media screen and (max-width: 768px) {
+    font-size: 10px;
+    line-height: 14px;
+    width: 174px;
+    height: 26px;
+  }
+
+  svg {
+    height: 18px;
+    color: #b6b2ef;
+    margin-left: 5px;
+
+    @media screen and (max-width: 768px) {
+      height: 11px;
+    }
+  }
+}
+
+.back-to-pools {
+  width: 148px;
+  height: 45px;
+  border: 2px solid #313650;
+  box-sizing: border-box;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  cursor: pointer;
+  margin-bottom: 26px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 10px;
+    line-height: 14px;
+    width: 86px;
+    height: 26px;
+  }
+
+  svg {
+    height: 11px;
+    color: #b6b2ef;
+    margin-right: 6px;
+
+    @media screen and (max-width: 768px) {
+      height: 7px;
+    }
   }
 }
