add withdraw & deposit code

--- a/styles/_pages/_migration.scss
+++ b/styles/_pages/_migration.scss
@@ -82,4 +82,10 @@
       margin-top: 61px;
     }
   }
+
+  .migration-view-container {
+    max-width: 653px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
