--- a/styles/_pages/_event.scss
+++ b/styles/_pages/_event.scss
@@ -265,3 +265,54 @@
     }
   }
 }
+
+.no-events-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 500px;
+
+  &>img {
+    width: 197px;
+  }
+
+  p {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 44px;
+    text-align: center;
+    color: #ffffff;
+  }
+
+  .no-events-buttons {
+    display: flex;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
+    a {
+      margin: 0px 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 250px;
+      height: 66px;
+      border: 1px solid #b6b2ef;
+      border-radius: 44px;
+      font-weight: 500;
+      font-size: 23.4667px;
+      line-height: 35px;
+      color: #B6B2EF;
+
+      @media screen and (max-width: 768px) {
+        margin: 15px 0px;
+      }
+
+      img {
+        height: 21px;
+        margin-left: 7px;
+      }
+    }
+  }
+}
